--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "brunonatali/stream": "^1.1",
+        "brunonatali/stream": "dev-master",
         "evenement/evenement": "^3.0 || ^2.0 || ^1.0",
         "react/dns": "^0.4.13",
-        "brunonatali/event-loop": "^1.0 || ^0.5 || ^0.4 || ^0.3.5",
+        "brunonatali/event-loop": "dev-master",
         "react/promise": "^2.6.0 || ^1.2.1",
         "react/promise-timer": "^1.4.0"
     },
